--- a/index.html
+++ b/index.html
@@ -9,61 +9,60 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', system-ui, sans-serif;
     }
     body {
-      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+      background: linear-gradient(135deg, #4b6cb7 0%, #182848 100%);
       min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       color: white;
-      padding: 20px;
+      padding: 15px;
     }
     .container {
-      width: 100%;
-      max-width: 500px;
-      background: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(10px);
-      border-radius: 20px;
-      padding: 30px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      max-width: 900px;
+      margin: 0 auto;
     }
-    h1 {
-      text-align: center;
+    h1, h2, h3 {
+      margin-bottom: 15px;
+      font-weight: 600;
+    }
+    .card {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 16px;
+      padding: 20px;
       margin-bottom: 20px;
-      font-size: 28px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
     }
     .form-group {
       margin-bottom: 15px;
     }
     label {
       display: block;
-      margin-bottom: 5px;
-      font-weight: 600;
+      margin-bottom: 6px;
+      font-weight: 500;
     }
     input, select {
       width: 100%;
       padding: 12px;
       border: none;
       border-radius: 10px;
-      background: rgba(255,255,255,0.9);
+      background: rgba(255,255,255,0.95);
       font-size: 16px;
     }
     button {
       width: 100%;
       padding: 12px;
-      background: #ff6b6b;
-      color: white;
+      background: #4cc9f0;
+      color: #0d1b2a;
       border: none;
       border-radius: 10px;
-      font-size: 16px;
       font-weight: bold;
       cursor: pointer;
       margin-top: 10px;
     }
     button:hover {
-      background: #ff5252;
+      background: #4361ee;
+      color: white;
     }
     .switch {
       text-align: center;
@@ -75,65 +74,100 @@
       text-decoration: none;
       font-weight: bold;
     }
-    .welcome {
+    .hidden { display: none; }
+
+    /* Dashboard Grid */
+    .locations-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+      gap: 16px;
+      margin-top: 10px;
+    }
+    .location-card {
+      background: rgba(255,255,255,0.15);
+      border-radius: 12px;
+      padding: 16px;
       text-align: center;
-      margin-bottom: 20px;
+      cursor: pointer;
+      transition: transform 0.2s, background 0.2s;
     }
-    .status {
+    .location-card:hover {
+      background: rgba(255,255,255,0.25);
+      transform: translateY(-2px);
+    }
+    .location-card.selected {
+      background: rgba(76, 201, 240, 0.4);
+      border: 2px solid #4cc9f0;
+    }
+    .location-card h4 {
+      font-size: 16px;
+      margin-bottom: 6px;
+    }
+    .location-card p {
+      font-size: 13px;
+      opacity: 0.9;
+    }
+    .status-dot {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      margin-right: 6px;
+    }
+    .dot-green { background: #06d6a0; }
+    .dot-yellow { background: #ffd166; }
+    .dot-red { background: #ef476f; }
+
+    /* Appointments */
+    .appointment-item {
       background: rgba(0,0,0,0.2);
-      padding: 15px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
-    .card {
-      background: rgba(255,255,255,0.9);
-      color: #333;
-      padding: 15px;
+      padding: 12px;
       border-radius: 10px;
       margin-bottom: 10px;
     }
-    .hidden { display: none; }
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- Auth Screens -->
-    <div id="loginScreen">
+    <!-- Login -->
+    <div id="loginScreen" class="card">
       <h1>Log Masuk Guru</h1>
       <div class="form-group">
         <label>Email</label>
-        <input type="email" id="loginEmail" placeholder="contoh@guru.edu.my" />
+        <input type="email" id="loginEmail" placeholder="guru@sekolah.edu.my" />
       </div>
       <div class="form-group">
         <label>Kata Laluan</label>
         <input type="password" id="loginPassword" placeholder="******" />
       </div>
       <button onclick="login()">Log Masuk</button>
-      <div class="switch">Tiada akaun? <a href="#" onclick="showSignup()">Daftar Sekarang</a></div>
+      <div class="switch">Belum daftar? <a href="#" onclick="showSignup()">Daftar Sekarang</a></div>
     </div>
 
-    <div id="signupScreen" class="hidden">
+    <!-- Signup -->
+    <div id="signupScreen" class="card hidden">
       <h1>Daftar Guru</h1>
       <div class="form-group">
         <label>Nama Penuh</label>
-        <input type="text" id="signupName" placeholder="Cikgu Ahmad" />
+        <input type="text" id="signupName" placeholder="Cikgu Aminah" />
       </div>
       <div class="form-group">
         <label>Email</label>
-        <input type="email" id="signupEmail" placeholder="ahmad@guru.edu.my" />
+        <input type="email" id="signupEmail" placeholder="aminah@sekolah.edu.my" />
       </div>
       <div class="form-group">
         <label>Kata Laluan</label>
         <input type="password" id="signupPassword" placeholder="******" />
       </div>
       <div class="form-group">
-        <label>Subjek Diajar</label>
+        <label>Subjek</label>
         <select id="signupSubject">
-          <option value="Matematik">Matematik</option>
-          <option value="Sains">Sains</option>
-          <option value="Bahasa Melayu">Bahasa Melayu</option>
-          <option value="Sejarah">Sejarah</option>
-          <option value="English">English</option>
+          <option>Matematik</option>
+          <option>Sains</option>
+          <option>Bahasa Melayu</option>
+          <option>Sejarah</option>
+          <option>English</option>
+          <option>Pendidikan Islam</option>
         </select>
       </div>
       <button onclick="signup()">Daftar</button>
@@ -142,62 +176,77 @@
 
     <!-- Dashboard -->
     <div id="dashboard" class="hidden">
-      <div class="welcome">
+      <div class="card">
         <h1>Selamat Datang, <span id="userName">Cikgu X</span>!</h1>
         <p id="currentTime"></p>
       </div>
 
-      <div class="status">
-        <h3>Status Keberadaan</h3>
-        <select id="statusSelect" onchange="updateStatus()">
-          <option value="available">✅ Sedia (Di Sekolah)</option>
-          <option value="in-meeting">📆 Dalam Mesyuarat</option>
-          <option value="teaching">👨‍🏫 Mengajar</option>
-          <option value="away">⚠️ Tiada Sementara</option>
-        </select>
+      <!-- Pilih Lokasi Keberadaan -->
+      <div class="card">
+        <h2>Pilih Lokasi Keberadaan Anda</h2>
+        <div class="locations-grid" id="locationsGrid">
+          <!-- Lokasi akan dijana oleh JS -->
+        </div>
       </div>
 
-      <div class="status">
-        <h3>Buat Temujanji</h3>
+      <!-- Temujanji -->
+      <div class="card">
+        <h2>Buat Temujanji</h2>
         <div class="form-group">
-          <label>Nama Pelajar/Ibu Bapa</label>
-          <input type="text" id="appointmentName" placeholder="Nama" />
+          <label>Nama Pelajar / Ibu Bapa</label>
+          <input type="text" id="apptName" placeholder="Ali bin Abu" />
         </div>
         <div class="form-group">
           <label>Tarikh & Masa</label>
-          <input type="datetime-local" id="appointmentTime" />
+          <input type="datetime-local" id="apptTime" />
         </div>
         <div class="form-group">
           <label>Tujuan</label>
-          <input type="text" id="appointmentReason" placeholder="Contoh: Bincang Prestasi" />
+          <input type="text" id="apptReason" placeholder="Bincang prestasi" />
         </div>
         <button onclick="createAppointment()">Simpan Temujanji</button>
       </div>
 
-      <div class="status">
-        <h3>Temujanji Hari Ini</h3>
+      <!-- Temujanji Hari Ini -->
+      <div class="card">
+        <h2>Temujanji Hari Ini</h2>
         <div id="appointmentsList"></div>
       </div>
 
-      <button onclick="logout()">Log Keluar</button>
+      <button onclick="logout()" style="background:#ef476f;color:white;">Log Keluar</button>
     </div>
   </div>
 
   <script>
-    // Simpan data dalam localStorage (untuk demo sahaja)
+    // Data lokasi (boleh tambah sebanyak mungkin)
+    const LOCATIONS = [
+      { id: 'A1', name: 'Bilik 1', block: 'Bangunan A' },
+      { id: 'A2', name: 'Bilik 2', block: 'Bangunan A' },
+      { id: 'A3', name: 'Bilik 3', block: 'Bangunan A' },
+      { id: 'B1', name: 'Bilik 1', block: 'Bangunan B' },
+      { id: 'B2', name: 'Bilik 2', block: 'Bangunan B' },
+      { id: 'B3', name: 'Bilik 3', block: 'Bangunan B' },
+      { id: 'C1', name: 'Makmal Sains', block: 'Bangunan C' },
+      { id: 'C2', name: 'Dewan Mesyuarat', block: 'Bangunan C' },
+      { id: 'D1', name: 'Pejabat Guru', block: 'Bangunan D' },
+    ];
+
+    // Keys untuk localStorage
     const USERS_KEY = 'guru_users';
+    const CURRENT_USER_KEY = 'guru_current';
+    const USER_LOCATIONS_KEY = 'guru_locations';
     const APPOINTMENTS_KEY = 'guru_appointments';
-    const STATUS_KEY = 'guru_status';
 
     // Inisialisasi
     document.addEventListener('DOMContentLoaded', () => {
-      if (localStorage.getItem('currentUser')) {
+      updateTime();
+      setInterval(updateTime, 60000);
+      if (localStorage.getItem(CURRENT_USER_KEY)) {
         showDashboard();
+        renderLocations();
       } else {
         showLogin();
       }
-      updateTime();
-      setInterval(updateTime, 60000);
     });
 
     function updateTime() {
@@ -216,19 +265,18 @@
       document.getElementById('dashboard').classList.add('hidden');
     }
     function showDashboard() {
-      const user = JSON.parse(localStorage.getItem('currentUser'));
+      const user = JSON.parse(localStorage.getItem(CURRENT_USER_KEY));
       document.getElementById('userName').innerText = user.name;
-      document.getElementById('statusSelect').value = localStorage.getItem(STATUS_KEY) || 'available';
-      loadAppointments();
       document.getElementById('loginScreen').classList.add('hidden');
       document.getElementById('signupScreen').classList.add('hidden');
       document.getElementById('dashboard').classList.remove('hidden');
+      loadAppointments();
     }
 
     // Auth
     function signup() {
-      const name = document.getElementById('signupName').value;
-      const email = document.getElementById('signupEmail').value;
+      const name = document.getElementById('signupName').value.trim();
+      const email = document.getElementById('signupEmail').value.trim();
       const password = document.getElementById('signupPassword').value;
       const subject = document.getElementById('signupSubject').value;
 
@@ -239,69 +287,86 @@
 
       let users = JSON.parse(localStorage.getItem(USERS_KEY) || '[]');
       if (users.some(u => u.email === email)) {
-        alert('Email sudah didaftar!');
+        alert('Email sudah wujud!');
         return;
       }
 
-      users.push({ name, email, password, subject });
+      const newUser = { name, email, password, subject };
+      users.push(newUser);
       localStorage.setItem(USERS_KEY, JSON.stringify(users));
-      localStorage.setItem('currentUser', JSON.stringify({ name, email, subject }));
+      localStorage.setItem(CURRENT_USER_KEY, JSON.stringify(newUser));
       alert('Pendaftaran berjaya!');
       showDashboard();
+      renderLocations();
     }
 
     function login() {
-      const email = document.getElementById('loginEmail').value;
+      const email = document.getElementById('loginEmail').value.trim();
       const password = document.getElementById('loginPassword').value;
 
       const users = JSON.parse(localStorage.getItem(USERS_KEY) || '[]');
       const user = users.find(u => u.email === email && u.password === password);
 
       if (user) {
-        localStorage.setItem('currentUser', JSON.stringify(user));
+        localStorage.setItem(CURRENT_USER_KEY, JSON.stringify(user));
         showDashboard();
+        renderLocations();
       } else {
         alert('Email atau kata laluan salah.');
       }
     }
 
     function logout() {
-      localStorage.removeItem('currentUser');
+      localStorage.removeItem(CURRENT_USER_KEY);
       showLogin();
     }
 
-    // Status
-    function updateStatus() {
-      const status = document.getElementById('statusSelect').value;
-      localStorage.setItem(STATUS_KEY, status);
-      alert('Status dikemaskini!');
+    // Lokasi Keberadaan
+    function renderLocations() {
+      const grid = document.getElementById('locationsGrid');
+      const user = JSON.parse(localStorage.getItem(CURRENT_USER_KEY));
+      const userLoc = localStorage.getItem(`guru_loc_${user.email}`) || '';
+
+      grid.innerHTML = LOCATIONS.map(loc => `
+        <div class="location-card ${userLoc === loc.id ? 'selected' : ''}" 
+             onclick="selectLocation('${loc.id}')">
+          <h4>${loc.name}</h4>
+          <p>${loc.block}</p>
+        </div>
+      `).join('');
     }
 
-    // Appointments
+    function selectLocation(locId) {
+      const user = JSON.parse(localStorage.getItem(CURRENT_USER_KEY));
+      localStorage.setItem(`guru_loc_${user.email}`, locId);
+      renderLocations();
+      alert(`Kini berada di: ${LOCATIONS.find(l => l.id === locId)?.name} (${LOCATIONS.find(l => l.id === locId)?.block})`);
+    }
+
+    // Temujanji
     function createAppointment() {
-      const name = document.getElementById('appointmentName').value;
-      const time = document.getElementById('appointmentTime').value;
-      const reason = document.getElementById('appointmentReason').value;
+      const name = document.getElementById('apptName').value.trim();
+      const time = document.getElementById('apptTime').value;
+      const reason = document.getElementById('apptReason').value.trim();
+      const user = JSON.parse(localStorage.getItem(CURRENT_USER_KEY));
 
       if (!name || !time || !reason) {
-        alert('Sila isi semua medan temujanji.');
+        alert('Sila isi semua medan.');
         return;
       }
 
-      let appointments = JSON.parse(localStorage.getItem(APPOINTMENTS_KEY) || '[]');
-      appointments.push({ name, time, reason, email: JSON.parse(localStorage.getItem('currentUser')).email });
-      localStorage.setItem(APPOINTMENTS_KEY, JSON.stringify(appointments));
+      let appts = JSON.parse(localStorage.getItem(APPOINTMENTS_KEY) || '[]');
+      appts.push({ name, time, reason, email: user.email });
+      localStorage.setItem(APPOINTMENTS_KEY, JSON.stringify(appts));
       alert('Temujanji disimpan!');
       loadAppointments();
     }
 
     function loadAppointments() {
       const today = new Date().toISOString().split('T')[0];
-      const user = JSON.parse(localStorage.getItem('currentUser'));
-      const appointments = JSON.parse(localStorage.getItem(APPOINTMENTS_KEY) || '[]');
-      const todayAppts = appointments.filter(appt =>
-        appt.time.startsWith(today) && appt.email === user.email
-      );
+      const user = JSON.parse(localStorage.getItem(CURRENT_USER_KEY));
+      const appts = JSON.parse(localStorage.getItem(APPOINTMENTS_KEY) || '[]');
+      const todayAppts = appts.filter(a => a.time.startsWith(today) && a.email === user.email);
 
       const listEl = document.getElementById('appointmentsList');
       if (todayAppts.length === 0) {
@@ -309,11 +374,11 @@
         return;
       }
 
-      listEl.innerHTML = todayAppts.map(appt => `
-        <div class="card">
-          <strong>${appt.name}</strong><br/>
-          ${new Date(appt.time).toLocaleString('ms-MY')}<br/>
-          <em>${appt.reason}</em>
+      listEl.innerHTML = todayAppts.map(a => `
+        <div class="appointment-item">
+          <strong>${a.name}</strong><br/>
+          <small>${new Date(a.time).toLocaleString('ms-MY')}</small><br/>
+          <em>${a.reason}</em>
         </div>
       `).join('');
     }
