--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Keberadaan Guru & Staf – KV Klang</title>
+  <title>Keberadaan Guru & Staf - KV Klang</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;500;600&display=swap">
   <style>
-    /* === DESAIN FORMAL & PROFESIONAL === */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Segoe UI', 'Inter', system-ui, -apple-system, sans-serif;
+      font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
     }
     body {
-      background-color: #f8fafc;
+      background: linear-gradient(135deg, #f0f4f8 0%, #e2e8f0 100%);
       color: #1e293b;
-      line-height: 1.6;
       min-height: 100vh;
       padding: 20px;
     }
@@ -25,297 +24,312 @@
       margin: 0 auto;
     }
 
-    /* Header Rasmi */
+    /* Header */
     .header {
-      text-align: center;
-      padding: 24px 16px;
-      margin-bottom: 32px;
-      border-bottom: 2px solid #3b82f6;
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      padding: 20px;
+      margin-bottom: 28px;
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
     }
-    .logo-box {
-      width: 80px;
-      height: 80px;
-      background: #1e40af;
+    .logo {
+      width: 60px;
+      height: 60px;
+      background: #3b82f6;
       border-radius: 12px;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 0 auto 16px;
       color: white;
       font-weight: bold;
-      font-size: 28px;
+      font-size: 24px;
     }
     .school-name {
-      font-size: 24px;
-      font-weight: 700;
-      color: #1e3a8a;
-      margin-bottom: 6px;
-    }
-    .subtitle {
-      font-size: 16px;
-      color: #475569;
+      font-size: 20px;
+      font-weight: 600;
+      color: #1e40af;
     }
 
-    /* Card Rasmi */
-    .card {
-      background: white;
-      border-radius: 12px;
+    /* Card Glass */
+    .glass-card {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 16px;
       padding: 24px;
       margin-bottom: 28px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
-      border: 1px solid #e2e8f0;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.12);
     }
     .card-title {
       font-size: 20px;
       font-weight: 600;
       color: #1e40af;
       margin-bottom: 20px;
-      padding-bottom: 12px;
-      border-bottom: 1px solid #f1f5f9;
     }
 
     /* Form */
-    .form-row {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-bottom: 20px;
-    }
     .form-group {
       margin-bottom: 16px;
     }
     label {
       display: block;
       margin-bottom: 6px;
-      font-weight: 600;
-      color: #334155;
+      font-weight: 500;
     }
     input, select, textarea {
       width: 100%;
       padding: 12px;
-      border: 1px solid #cbd5e1;
-      border-radius: 8px;
-      font-size: 15px;
-      background: #f8fafc;
+      border: 1px solid rgba(0,0,0,0.15);
+      border-radius: 10px;
+      font-size: 16px;
     }
-    input:focus, select:focus, textarea:focus {
-      outline: none;
-      border-color: #3b82f6;
-      background: white;
-    }
-
     button {
+      width: 100%;
+      padding: 12px;
       background: #1e40af;
       color: white;
       border: none;
-      border-radius: 8px;
-      padding: 12px 24px;
+      border-radius: 10px;
       font-weight: 600;
       cursor: pointer;
-      transition: background 0.2s;
+      margin-top: 8px;
     }
     button:hover {
       background: #1d3557;
     }
-    .btn-group {
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-    }
-    .btn-secondary {
-      background: #64748b;
-    }
 
     /* Grid Kategori */
-    .categories-grid {
+    .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
       gap: 20px;
+      margin-top: 20px;
     }
-    .category-column {
-      background: #f1f5f9;
-      border-radius: 10px;
+    .col {
+      background: rgba(255, 255, 255, 0.15);
+      border-radius: 14px;
       padding: 16px;
     }
-    .category-column h3 {
-      font-size: 15px;
+    .col h3 {
+      font-size: 16px;
       font-weight: 600;
       color: #1e40af;
       margin-bottom: 12px;
     }
-    .record-item {
-      background: white;
-      border-radius: 8px;
+    .record {
+      background: rgba(255,255,255,0.2);
       padding: 10px;
+      border-radius: 8px;
       margin-bottom: 8px;
       font-size: 14px;
-      border-left: 3px solid #3b82f6;
     }
-    .record-item strong {
-      color: #1e3a8a;
+    .record strong { color: #1e3a8a; }
+
+    /* Admin Button */
+    .admin-btn {
+      background: #8b5cf6;
+      margin-top: 16px;
     }
 
-    /* Loading */
-    .loading {
-      text-align: center;
-      color: #64748b;
-      font-style: italic;
-    }
-
-    /* Responsif */
-    @media (max-width: 768px) {
-      .header { padding: 16px; }
-      .logo-box { width: 60px; height: 60px; font-size: 22px; }
-      .school-name { font-size: 20px; }
-      .form-row { grid-template-columns: 1fr; }
-    }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <!-- Header Rasmi KV Klang -->
+    <!-- Header -->
     <div class="header">
-      <div class="logo-box">KV</div>
+      <div class="logo">KV</div>
       <div class="school-name">KOLEJ VOKASIONAL KLANG</div>
-      <div class="subtitle">Sistem Pengurusan Keberadaan Guru & Staf</div>
     </div>
 
     <!-- Form Input -->
-    <div class="card">
-      <h2 class="card-title">Tambah Rekod Keberadaan Baharu</h2>
-      <div class="form-row">
-        <div class="form-group">
-          <label>Nama Guru / Staf</label>
-          <input type="text" id="nama" placeholder="Contoh: Cikgu Azlin Binti Ahmad" />
-        </div>
-        <div class="form-group">
-          <label>Kategori</label>
-          <select id="kategori">
-            <option value="A">A. Semua / Jenis Cuti</option>
-            <option value="B">B. Bertugas di Luar Sekolah</option>
-            <option value="C">C. Bertugas di Sekolah</option>
-            <option value="D">D. Aktiviti di Sekolah</option>
-            <option value="E">E. Aktiviti Luar Sekolah</option>
-          </select>
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group">
-          <label>Tarikh</label>
-          <input type="date" id="tarikh" />
-        </div>
+    <div class="glass-card">
+      <h2 class="card-title">Tambah Rekod Keberadaan</h2>
+      <div class="form-group">
+        <label>Nama Guru / Staf</label>
+        <input type="text" id="nama" placeholder="Cikgu Azlin" />
       </div>
       <div class="form-group">
-        <label>Catatan (Wajib)</label>
-        <textarea id="catatan" rows="2" placeholder="Contoh: Pengawas SPM, Mesyuarat Pentadbiran, Lawatan Industri"></textarea>
+        <label>Kategori</label>
+        <select id="kategori">
+          <option value="A">A. Semua / Jenis Cuti</option>
+          <option value="B">B. Bertugas di Luar Sekolah</option>
+          <option value="C">C. Bertugas di Sekolah</option>
+          <option value="D">D. Aktiviti di Sekolah</option>
+          <option value="E">E. Aktiviti Luar Sekolah</option>
+        </select>
       </div>
-      <button onclick="tambahRekod()">Simpan ke Pangkalan Data</button>
+      <div class="form-group">
+        <label>Tarikh</label>
+        <input type="date" id="tarikh" />
+      </div>
+      <div class="form-group">
+        <label>Catatan</label>
+        <textarea id="catatan" rows="2" placeholder="Contoh: Pengawas SPM, Mesyuarat"></textarea>
+      </div>
+      <button onclick="tambahRekod()">Simpan ke Firebase</button>
+      <button id="exportBtn" class="admin-btn hidden">📥 Export ke Google Sheets</button>
     </div>
 
     <!-- Paparan Data -->
-    <div class="card">
+    <div class="glass-card">
       <h2 class="card-title">Senarai Keberadaan Terkini</h2>
-      <div class="btn-group">
-        <button onclick="muatSemula()">🔄 Muat Semula Data</button>
-        <button class="btn-secondary" onclick="bukaSheets()">📄 Lihat di Google Sheets</button>
-      </div>
-      <div id="dataContainer" style="margin-top:20px;">
-        <div class="loading">Memuatkan data dari Google Sheets...</div>
+      <div class="grid" id="dataGrid">
+        <div class="col"><h3>A. Semua / Jenis Cuti</h3><div id="colA" class="records"></div></div>
+        <div class="col"><h3>B. Bertugas di Luar Sekolah</h3><div id="colB" class="records"></div></div>
+        <div class="col"><h3>C. Bertugas di Sekolah</h3><div id="colC" class="records"></div></div>
+        <div class="col"><h3>D. Aktiviti di Sekolah</h3><div id="colD" class="records"></div></div>
+        <div class="col"><h3>E. Aktiviti Luar Sekolah</h3><div id="colE" class="records"></div></div>
       </div>
     </div>
   </div>
 
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
+
   <script>
-    // 🔗 URL APPS SCRIPT ANDA
-    const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw9_dcZiMUeyMmZx65dDvMOV9Ezezc_Pfeo-lE2Gva_d823dPze_YdqepXlJtANeYBx/exec';
+    // 🔧 Firebase Config
+    const firebaseConfig = {
+      apiKey: "AIzaSyAhT4W6D6ueYRBvkHXrHwAKe8ooAwWfbbU",
+      authDomain: "schoolnewsystem-dfba8.firebaseapp.com",
+      databaseURL: "https://schoolnewsystem-dfba8-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "schoolnewsystem-dfba8",
+      storageBucket: "schoolnewsystem-dfba8.firebasestorage.app",
+      messagingSenderId: "913620840598",
+      appId: "1:913620840598:web:50f113ecc7be8c7df8d2b7"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.database();
 
     // Set tarikh hari ini
     document.getElementById('tarikh').valueAsDate = new Date();
 
-    // Buka Google Sheets
-    function bukaSheets() {
-      window.open('https://docs.google.com/spreadsheets/d/1a2b3c4d5e6f7g8h9i0j/edit?usp=sharing', '_blank');
+    // Semak jika admin
+    let isAdmin = false;
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        // Ambil data pengguna untuk semak role
+        firebase.database().ref('users/' + user.uid).once('value').then(snapshot => {
+          const userData = snapshot.val();
+          isAdmin = userData && userData.role === 'admin';
+          if (isAdmin) {
+            document.getElementById('exportBtn').classList.remove('hidden');
+          }
+          loadRecords();
+        });
+      } else {
+        // Jika tiada login, redirect ke login (opsional)
+        // Untuk demo, kita tetap izinkan tambah rekod tanpa login
+        loadRecords();
+      }
+    });
+
+    // Load data from Firebase
+    function loadRecords() {
+      const cols = {
+        'A': document.getElementById('colA'),
+        'B': document.getElementById('colB'),
+        'C': document.getElementById('colC'),
+        'D': document.getElementById('colD'),
+        'E': document.getElementById('colE')
+      };
+
+      for (let k in cols) {
+        cols[k].innerHTML = '<p style="text-align:center;">Memuatkan...</p>';
+      }
+
+      db.ref('keberadaan').on('value', snapshot => {
+        if (!snapshot.exists()) {
+          for (let k in cols) cols[k].innerHTML = '<p style="text-align:center;">Tiada rekod.</p>';
+          return;
+        }
+
+        const data = [];
+        snapshot.forEach(child => {
+          data.push({ id: child.key, ...child.val() });
+        });
+
+        for (let k in cols) cols[k].innerHTML = '';
+
+        data.forEach(item => {
+          if (cols[item.kategori]) {
+            const div = document.createElement('div');
+            div.className = 'record';
+            div.innerHTML = `<strong>${item.nama}</strong><br/>${item.tarikh}<br/>${item.catatan || '-'}`;
+            cols[item.kategori].appendChild(div);
+          }
+        });
+      });
     }
 
-    // Tambah rekod baharu
-    async function tambahRekod() {
+    // Tambah rekod
+    function tambahRekod() {
       const nama = document.getElementById('nama').value.trim();
       const kategori = document.getElementById('kategori').value;
       const tarikh = document.getElementById('tarikh').value;
       const catatan = document.getElementById('catatan').value.trim();
 
-      if (!nama || !tarikh || !catatan) {
-        alert('Sila isi semua medan (Nama, Tarikh, dan Catatan wajib diisi).');
+      if (!nama || !tarikh) {
+        alert('Sila isi Nama & Tarikh.');
         return;
       }
 
-      try {
-        const res = await fetch(APPS_SCRIPT_URL, {
-          method: 'POST',
-          mode: 'no-cors', // Penting untuk Apps Script
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ nama, kategori, tarikh, catatan })
-        });
-
-        // Apps Script dengan no-cors tidak kembalikan JSON, tapi kita anggap berjaya
-        alert('✅ Rekod berjaya disimpan ke Google Sheets!');
+      db.ref('keberadaan').push({
+        nama,
+        kategori,
+        tarikh,
+        catatan,
+        timestamp: Date.now()
+      }).then(() => {
+        alert('✅ Rekod disimpan!');
         document.getElementById('nama').value = '';
         document.getElementById('catatan').value = '';
-        muatSemula();
-      } catch (err) {
-        alert('❌ Gagal menyimpan: ' + err.message);
-      }
+      });
     }
 
-    // Muat data (GET)
-    async function muatSemula() {
-      const container = document.getElementById('dataContainer');
-      container.innerHTML = '<div class="loading">Memuatkan data...</div>';
+    // Export to Google Sheets
+    document.getElementById('exportBtn').onclick = async function() {
+      const snapshot = await db.ref('keberadaan').once('value');
+      if (!snapshot.exists()) {
+        alert('Tiada data untuk dieksport.');
+        return;
+      }
+
+      const data = [];
+      snapshot.forEach(child => {
+        data.push(child.val());
+      });
+
+      const appsScriptUrl = 'https://script.google.com/macros/s/AKfycbz2wQsGYqpibshebgzaUcFO733VvjGJHQ5tzU3P50UXDI8BFX2s6BJrz1lhC7hz9GZT/exec';
 
       try {
-        const res = await fetch(APPS_SCRIPT_URL);
-        const data = await res.json();
-
-        if (!Array.isArray(data)) {
-          container.innerHTML = '<p class="loading">Tiada data atau format tidak sah.</p>';
-          return;
+        for (const item of data) {
+          const res = await fetch(appsScriptUrl, {
+            method: 'POST',
+            mode: 'no-cors' // Apps Script memerlukan ini
+          });
+          // Dengan no-cors, kita tak boleh baca response, tapi anggap berjaya
         }
-
-        const kategoriMap = {
-          'A': 'A. Semua / Jenis Cuti',
-          'B': 'B. Bertugas di Luar Sekolah',
-          'C': 'C. Bertugas di Sekolah',
-          'D': 'D. Aktiviti di Sekolah',
-          'E': 'E. Aktiviti Luar Sekolah'
-        };
-
-        let html = '<div class="categories-grid">';
-        ['A','B','C','D','E'].forEach(kat => {
-          const items = data.filter(item => item.kategori === kat);
-          html += `
-            <div class="category-column">
-              <h3>${kategoriMap[kat]}</h3>
-              ${items.length ? items.map(item => `
-                <div class="record-item">
-                  <strong>${item.nama}</strong><br/>
-                  ${new Date(item.tarikh).toLocaleDateString('ms-MY')}<br/>
-                  ${item.catatan}
-                </div>
-              `).join('') : '<p style="font-style:italic;color:#64748b;">Tiada rekod</p>'}
-            </div>
-          `;
-        });
-        html += '</div>';
-
-        container.innerHTML = html;
+        alert('✅ Data berjaya diexport ke Google Sheets!');
       } catch (err) {
-        container.innerHTML = `<p class="loading">Ralat: ${err.message}</p>`;
+        alert('❌ Gagal export: ' + err.message);
       }
-    }
+    };
 
-    // Muat data pertama kali
-    muatSemula();
+    loadRecords();
   </script>
 </body>
 </html>
