--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <div class="container">
     <!-- Header -->
     <div class="header">
-      <div class="logo">KV</div>
+      <div class="logo">LOGO.png</div>
       <div class="school-name">KOLEJ VOKASIONAL KLANG</div>
     </div>
 
@@ -175,7 +175,7 @@
         <label>Catatan</label>
         <textarea id="catatan" rows="2" placeholder="Contoh: Pengawas SPM, Mesyuarat"></textarea>
       </div>
-      <button onclick="tambahRekod()">Simpan ke Firebase</button>
+      <button onclick="tambahRekod()">SAVE</button>
       <button id="exportBtn" class="admin-btn hidden">📥 Export ke Google Sheets</button>
     </div>
 
